@@ -7,14 +7,14 @@
   },
   // $Start-ApplicationInsights$
   "ApplicationInsights": {
-    // The CDN URL to the Application Insights JavaScript file.  
+    // The CDN URL to the Application Insights JavaScript file.
     "CdnUrl": "https://az416426.vo.msecnd.net/scripts/a/ai.0.js",
     // The instrumentation key for Application Insights retrieved from Azure e.g. 11111111-2222-3333-4444-555555555555
     "InstrumentationKey": "YOUR APPLICATION INSIGHTS INSTRUMENTATION KEY"
   },
   // $End-ApplicationInsights$
   "Logging": {
-    "IncludeScopes": true,
+    "IncludeScopes": false,
     "LogLevel": {
       "Default": "Debug",
       "System": "Information",
